--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,20 @@
         <webdriver.base.url></webdriver.base.url>
     </properties>
     <dependencies>
+
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-junit-platform-engine</artifactId>
+            <version>7.15.0</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-launcher</artifactId>
+            <version>1.10.1</version>
+        </dependency>
+
         <dependency>
         <groupId>net.serenity-bdd</groupId>
         <artifactId>serenity-bdd</artifactId>
@@ -122,7 +136,7 @@
             <plugin>
                 <groupId>net.serenity-bdd.maven.plugins</groupId>
                 <artifactId>serenity-maven-plugin</artifactId>
-                <version>${serenity.version}</version>
+                <version>4.0.43</version>
                 <configuration>
                     <tags>${tags}</tags>
                     <reports>single-page-html</reports>
@@ -140,7 +154,7 @@
                     <dependency>
                         <groupId>net.serenity-bdd</groupId>
                         <artifactId>serenity-single-page-report</artifactId>
-                        <version>${serenity.version}</version>
+                        <version>4.0.43</version>
                     </dependency>
                 </dependencies>
             </plugin>
